# RDMA_Manager_Demo

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: CMakeLists.txt  DynamicContext.h  Msg.h  PigeonCommon.h  PigeonContext.h  dev_manager.h  rdma_conn.h  rdma_device.h  rdma_server.h  vContext.h  vQP.h  vQPMapper.h
scripts/: 00-installer-config.yaml  install_ofed.sh  monitor.py  open_vf.sh  result  result1  result2  result3  run_vm.sh  set_2MB_hugepage.sh  set_bandwidth.sh  set_bond0.sh  set_mac.sh  switch_nic.sh  vmvf.xml  vmvf0.xml  vmvf1.xml  vmvf2.xml  vmvf3.xml
scripts/redis_bench/: redis.conf  run_redis_server.sh
source/: Bench.cc  CMakeLists.txt  Client.cc  DynamicContext.cc  PigeonContext.cc  Server.cc  dev_manager.cc  rdma_conn.cc  vContext.cc  vQP.cc
test/: CMakeLists.txt  flattingClient.cc  flattingServer.cc
